Styles System => Stable Grouping in General.xaml and as a ResourceDictionary in app.xaml WhiteTheme.xaml
Remarks: This Style System allows the use of "keys" in any xaml style

--- a/XF_FoodApp/XF_FoodApp/App.xaml
+++ b/XF_FoodApp/XF_FoodApp/App.xaml
@@ -7,7 +7,7 @@
              x:Class="XF_FoodApp.App">
     
     <Application.Resources>
-        <ResourceDictionary Source="/Styles/General.xaml" />
+        <ResourceDictionary Source="/Styles/WhiteTheme.xaml" />
     </Application.Resources>
     
 </Application>
