--- a/XF_FoodApp/XF_FoodApp/Styles/Sizes.xaml
+++ b/XF_FoodApp/XF_FoodApp/Styles/Sizes.xaml
@@ -6,15 +6,20 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d">
 
-    <x:Double x:Key="SpacingSmall">5</x:Double>
-    <x:Double x:Key="SpacingMedium">10</x:Double>
-    <x:Double x:Key="SpacingLarge">15</x:Double>
-
-    <OnPlatform x:Key="GridLengthNavigationBarHeight"
-                x:TypeArguments="GridLength"
-                Android="56"
-                iOS="44" />
-
-    <x:Double x:Key="NavigationBar">15</x:Double>
+    <Style TargetType="Grid" x:Key="GridSpacing">
+        
+        <Setter Property="RowSpacing" Value="0"/>
+        <Setter Property="ColumnSpacing" Value="0"/>
+        
+        <Setter Property="Padding">
+            <Setter.Value>
+                <OnPlatform x:TypeArguments="Thickness">
+                    <On Platform="Android" Value="20,50,10,40"/>
+                    <On Platform="Android" Value="20,20,20,20"/>
+                </OnPlatform>
+            </Setter.Value>
+        </Setter>
+        
+    </Style>
 
 </ResourceDictionary>
