Add CustomIconFont with icomoon

--- a/XF_FoodApp/XF_FoodApp/App.xaml
+++ b/XF_FoodApp/XF_FoodApp/App.xaml
@@ -7,7 +7,7 @@
              x:Class="XF_FoodApp.App">
     
     <Application.Resources>
-        <ResourceDictionary Source="/Styles/WhiteTheme.xaml" />
+        <ResourceDictionary Source="/Styles/Themes/WhiteTheme.xaml" />
     </Application.Resources>
     
 </Application>
