--- a/XF_FoodApp/XF_FoodApp/Styles/General.xaml
+++ b/XF_FoodApp/XF_FoodApp/Styles/General.xaml
@@ -9,7 +9,7 @@
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="Texts.xaml" />
         <ResourceDictionary Source="Icons.xaml" />
-        <ResourceDictionary Source="Sizes.xaml" />
+        <ResourceDictionary Source="Spaces.xaml" />
     </ResourceDictionary.MergedDictionaries>
 
 
