--- a/XF_FoodApp/XF_FoodApp/Styles/Themes/DarkTheme.xaml
+++ b/XF_FoodApp/XF_FoodApp/Styles/Themes/DarkTheme.xaml
@@ -1,18 +1,18 @@
 ﻿<?xml version="1.0" encoding="UTF-8" ?>
 <?xaml-comp compile="true" ?>
 <ResourceDictionary xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:d="http://xamarin.com/schemas/2014/forms/design"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             Source="General.xaml"
-             mc:Ignorable="d">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+                    xmlns:d="http://xamarin.com/schemas/2014/forms/design"
+                    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                    mc:Ignorable="d"
+                    Source="/Styles/General.xaml">
 
     <Color x:Key="colAccentCheck">#FFE7F9F5</Color>
     <Color x:Key="colAccentError">#FFF9E7EB</Color>
     <Color x:Key="colBG">#FFF5F8FB</Color>
     <Color x:Key="colCheck">#FF10CA87</Color>
     <Color x:Key="colError">#FFCA1030</Color>
-    <Color x:Key="colPrim">#FF9A196B</Color>
+    <Color x:Key="colPrim">#1DD8BF</Color>
     <Color x:Key="colRemPrim">#FFF93963</Color>
     <Color x:Key="colRemSub">#FFD4145C</Color>
     <Color x:Key="colTxtDes">#FF000000</Color>
