--- a/XF_FoodApp/XF_FoodApp/Styles/Themes/WhiteTheme.xaml
+++ b/XF_FoodApp/XF_FoodApp/Styles/Themes/WhiteTheme.xaml
@@ -1,11 +1,11 @@
 ﻿<?xml version="1.0" encoding="UTF-8" ?>
 <?xaml-comp compile="true" ?>
 <ResourceDictionary xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:d="http://xamarin.com/schemas/2014/forms/design"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             Source="General.xaml"
-             mc:Ignorable="d">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+                    xmlns:d="http://xamarin.com/schemas/2014/forms/design"
+                    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                    mc:Ignorable="d"
+                    Source="/Styles/General.xaml">
 
     <Color x:Key="colAccentCheck">#FFE7F9F5</Color>
     <Color x:Key="colAccentError">#FFF9E7EB</Color>
