--- a/XF_FoodApp/XF_FoodApp/AppShell.xaml
+++ b/XF_FoodApp/XF_FoodApp/AppShell.xaml
@@ -7,7 +7,8 @@
        xmlns:local="clr-namespace:XF_FoodApp.Views"
        FlyoutBehavior="Locked"
        Title="XF_FoodApp"
-       x:Class="XF_FoodApp.AppShell">
+       x:Class="XF_FoodApp.AppShell"
+       Visual="Material">
 
     <!-- 
         Styles and Resources 
@@ -29,16 +30,16 @@
     <!-- Your Pages -->
     <TabBar Style="{StaticResource BaseStyle}">
     
-        <Tab Title="Explore" Icon="{StaticResource IconDemo}">
+        <Tab Title="Explore" Icon="{StaticResource icon_tab_explore}">
             <ShellContent ContentTemplate="{DataTemplate local:ItemsPage}" />
         </Tab>
-        <Tab Title="My order" Icon="{StaticResource IconDemo2}">
+        <Tab Title="My order" Icon="{StaticResource icon_tab_order}">
             <ShellContent ContentTemplate="{DataTemplate local:AboutPage}" />
         </Tab>
-        <Tab Title="Favourite" Icon="{StaticResource IconDemo3}">
+        <Tab Title="Favourite" Icon="{StaticResource icon_tab_favorite}">
             <ShellContent ContentTemplate="{DataTemplate local:ItemsPage}" />
         </Tab>
-        <Tab Title="Profile" Icon="{StaticResource IconDemo4}">
+        <Tab Title="Profile" Icon="{StaticResource icon_tab_profile}">
             <ShellContent ContentTemplate="{DataTemplate local:AboutPage}" />
         </Tab>
         
