--- a/XF_FoodApp/XF_FoodApp/Styles/Themes/WhiteTheme.xaml
+++ b/XF_FoodApp/XF_FoodApp/Styles/Themes/WhiteTheme.xaml
@@ -9,17 +9,18 @@
 
     <Color x:Key="colAccentCheck">#FFE7F9F5</Color>
     <Color x:Key="colAccentError">#FFF9E7EB</Color>
-    <Color x:Key="colBG">#FFF5F8FB</Color>
+    <Color x:Key="colAccentUnEnt">#FFF2F3F5</Color>
+    <Color x:Key="colBG1">#FFF5F8FB</Color>
     <Color x:Key="colCheck">#FF10CA87</Color>
+    <Color x:Key="colCombTBS">#FFFFFFFF</Color>
     <Color x:Key="colError">#FFCA1030</Color>
     <Color x:Key="colPrim">#FF9A196B</Color>
-    <Color x:Key="colRemPrim">#FFF93963</Color>
-    <Color x:Key="colRemSub">#FFD4145C</Color>
-    <Color x:Key="colTxtDes">#FF000000</Color>
+    <Color x:Key="colRemSec">#FFD4145C</Color>
+    <Color x:Key="colTxtCom23">#FF56565A</Color>
     <Color x:Key="colTxtEnt">#FF4D4D53</Color>
     <Color x:Key="colTxtPrim">#FF26315F</Color>
-    <Color x:Key="colTxtSec">#FF56565A</Color>
+    <Color x:Key="colTxtRemPrim">#FFF93963</Color>
     <Color x:Key="colTxtSub">#FFE3E7EF</Color>
-    <Color x:Key="colTxtTit">#FFFFFFFF</Color>
+    <Color x:Key="colTxtTer">#FF000000</Color>
 
 </ResourceDictionary>
