--- a/XF_FoodApp/XF_FoodApp/Styles/Spaces.xaml
+++ b/XF_FoodApp/XF_FoodApp/Styles/Spaces.xaml
@@ -25,12 +25,29 @@
     <!--++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-->
 
 
-    <Style TargetType="Grid" x:Key="GridMasterSpace">
-
-        <Setter Property="RowSpacing" Value="0"/>
-        <Setter Property="ColumnSpacing" Value="0"/>
+    <Style TargetType="Grid" x:Key="GridIdealSpace">
         <Setter Property="Padding" Value="{StaticResource idealSpace}"/>
-
     </Style>
 
+    <Style TargetType="Grid" x:Key="GridMediumSpace">
+        <Setter Property="Padding" Value="{StaticResource mediumSpace}"/>
+    </Style>
+
+    <Style TargetType="Grid" x:Key="GridBigSpace">
+        <Setter Property="Padding" Value="{StaticResource bigSpace}"/>
+    </Style>
+    
+    
+    <!-- SPACES BASE-->
+    <!--++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-->
+    <Style TargetType="Grid">
+        <Setter Property="RowSpacing" Value="0" />
+        <Setter Property="ColumnSpacing" Value="0" />
+    </Style>
+
+    <Style TargetType="StackLayout">
+        <Setter Property="Spacing" Value="0" />
+    </Style>
+    <!--++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-->
+    
 </ResourceDictionary>
